# tinyland-huskycat

./: .bazelrc  .envrc  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.backup  .mise.toml  .outbot.yml  BUILD.bazel  CHANGELOG.md  CLAUDE.md  ContainerFile  FEB6_sprint.md  GIT_HOOKS_SUCCESS.md  LICENSE  MODULE.bazel  README.md  TODO-remove-emojis.md  build_binary.py  flake.nix  huskycat.spec  justfile  mkdocs.yml  package.json  prompt.txt  pyproject.toml  setup.cfg  test_autofix.py
.githooks/: README.md  commit-msg  post-commit  pre-commit  pre-push
docs/: BETA_TESTING.md  CURRENT_STATUS.md  SPRINT_PLAN.md  binary-downloads.md  build-system-enhancement-plan.md  cli-reference.md  configuration.md  container-usage.md  dogfooding.md  future-roadmap.md  github-actions.md  gitlab-auto-devops-complete.md  gitlab-ci-cd.md  index.md  installation.md  macos-code-signing.md  mcp-tool-api.md  nix-install.md  nonblocking-hooks.md  package-install.md  performance.md  troubleshooting.md
reports/: e2e-summary.json
scripts/: download_tools.py  fpm-postinstall.sh  fpm-preremove.sh  generate-llms-docs.py  install-unified.sh  install.sh
site/: 404.html  index.html  llms-full.md  llms.json  llms.txt  sitemap.xml
tests/: README.md  conftest.py  playwright.config.py  quality_checklist.md  run_comprehensive_tests.py  run_tests.py  test_chapel_formatter.py  test_container_comprehensive.py  test_core_base.py  test_dogfooding.py  test_e2e_deployment.py  test_execution_modes.py  test_factory.py  test_fast_mode.sh  test_git_hooks.py  test_hook_generator.py  test_mcp_integration_comprehensive.py  (+20 more)
(+153 files in other folders)
